--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/public/technical-support.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Routing - Your logo</title>
+    <title>React Routing - Your </title>
   </head>
   <body>
     <div id="root"></div>
